.charts/tink-backend-aggregation/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aggregation
  namespace: aggregation
spec:
  podSelector:
    matchLabels:
      app: aggregation-service

  egress:
  - {}

  ingress:
  - ports:
    - port: 8443
      protocol: TCP
    from:
    - namespaceSelector:
        matchLabels:
          service: ingress-nginx-public

  policyTypes:
  - Egress
  - Ingress
